--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,8 @@
 <h1>NEW PAGE</h1>
+
+<% @photos.each do |photo| %>
+<div>
+  <img src="<%= photo[:url] %>">
+  <p>Like Count: <%= photo[:total_likes]%></p>
+</div>
+<% end %>
