--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,24 @@
 <% if @render %>
   <h1>Your best photos:</h1>
+  <% liked_photos = 0 %>
   <% @photos.each do |photo| %>
  
     <%if photo[:total_likes] > 0 %>
+      <% liked_photos += 1 %>
       <div>
         <img src="<%= photo[:url] %>">
         <p>Like Count: <%= photo[:total_likes] %></p>
       </div>
-    <% else %>
-      <div>
-        Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
-        <img src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
-      </div>
     <% end %>
+  <% end %>
+  <p><%= liked_photos%> photos found.</p>
+  <% if liked_photos == 0 %>      
+    <div>
+      Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
+      <img src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
+    </div>
   <% end %>
 
 <% else %>
-  <h1>Log in to find your best photos!</h1>
+  <h1><%= button_to "Find my best\nphotos!", user_omniauth_authorize_path(:facebook) %></h1>
 <% end %>
