--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,20 @@
 
 <nav class="navbar navbar-default" role="navigation">
 <div class="my_nav">
-<div id="logo">Likes Me</div>
-<span><% if user_signed_in? %>
+<a href="/" id="logo">Likes Me</a>
+  <span class="sign_in">
+    <%= link_to "Sign In to Likes Me", new_user_session_path %>
+  </span>
+  <span class="sign_in">
+    <%= link_to "Sign Up to Likes Me",  new_user_registration_path %>
+  </span>
+  <span class="sign_in">
+  <% if user_signed_in? %>
     <%= link_to "Log Out", destroy_user_session_path %>
   <% else %>
     <%= link_to "Sign In With Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
-</span>
+  </span>
 </div>
 </nav>
 <div class="container">
