--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -24,6 +24,13 @@ body {
   padding-left: 5px;
 }
 
+@media (max-width: 800px) {
+  #logo {
+    display: block;
+  }
+}
+
+
 img {
   height: 400px;
 }
@@ -44,7 +51,7 @@ a:hover {
   padding-top: 3em;
 }
 
-input[type="submit"] {
+button, input[type="submit"] {
   margin: 1em;
   border: none;
   padding: 1em;
@@ -53,6 +60,27 @@ input[type="submit"] {
   font-weight: bold;
   text-shadow: 2px 2px #9395A3;
   background-color: #ddd;
+}
+.photo img {
+  width: 100%;
+  height: auto;
+}
+
+
+input[type="checkbox"], input[type="radio"] {
+  float: right;
+/*  margin-right: 5px;
+  margin-top: 2px;*/
+  margin: 2px 5px 0 0;
+  line-height: normal;
+  -ms-transform: scale(3);
+  -moz-transform: scale(3);
+  -webkit-transform: scale(3);
+  -o-transform: scale(3);
+}
+
+p{
+  font-size: 1.5em;
 }
 
 .sign_in {
