--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,33 +1,38 @@
 <% if @render %>
-
-<h1>Your best photos:</h1>
-<% liked_photos = 0 %>
-<form action = "/" method="post">
-  <% @photos.each do |photo| %>
-  <div class="photo">
-    <div class="row">
-      <%if photo[:total_likes] > 0 && photo[:num_tags] <= 4 %>
-      <% liked_photos += 1 %>
-      <div class="col-md-4">
-        <img src="<%= photo[:url] %>"><br>
-        <input type="checkbox" name="photo" value="<%= photo[:id] %>">
-        <p><%= photo[:total_likes] %> Likes</p>
-      </div>
+  <% if @num_best_photos > 0 %>
+    <h1>Your best photos:</h1>
+    <form action = "/" method="post">
+    <div class="photo">
+      <div class="row">
+      <% @photos.each do |photo| %>
+          <div class="col-md-4">
+            <img src="<%= photo[:url] %>"><br>
+            <input type="checkbox" name="photo" value="<%= photo[:id] %>">
+            <p><%= photo[:total_likes] %> Likes</p>
+          </div> 
       <% end %> 
-      <% end %>
+      </div>
     </div>
-  </div>
-  <button type="submit">Save Best Photos!</button>
-   <button id="okcupid">Export to OKCupid <sup>&beta;</sup></button>
-</form>
 
-<h3><%= liked_photos%> photos found.</h3>
-<% if liked_photos == 0 %>      
-<div>
-  Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
-  <img src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
-</div>
-<% end %>
+      <div class="row">
+        <div class="col-md-4">
+          <button type="submit">Save Best Photos!</button>  
+        </div>
+        <div class="col-md-4">
+          <button id="okcupid">Export to OKCupid<sup>&beta;</sup></button>
+        </div>
+        <div class="col-md-4">
+          <button id="tinder">Export to tinder<sup>&beta;</sup></button>
+        </div>
+      </div>
+    </form>
+    <h3><%= @num_best_photos %> photos found.</h3>
+    <% else %>      
+      <div>
+        Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
+        <img class="sad" src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
+      </div>
+    <% end %>
 
 
 
