--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,7 +9,7 @@ body {
   margin: 0 auto;   
   
 }
-.navbar{
+.navbar {
   background-color: #2855a2;
 }
 
@@ -30,16 +30,15 @@ body {
   }
 }
 
-
 img {
   height: 400px;
 }
 
-a {
+.my_nav a {
   color: white;
 }
 
-a:hover {
+.my_nav a:hover {
   text-decoration: none;
   color: white;
   text-shadow: 1px 2px #FF6262;
@@ -52,7 +51,7 @@ a:hover {
 }
 
 button, input[type="submit"] {
-  margin: 1em;
+  margin-top: 1em;
   border: none;
   padding: 1em;
   font-size: 2em;
@@ -66,12 +65,6 @@ button, input[type="submit"] {
   height: auto;
 }
 
-#okcupid{
-  color: white;
-  background-color: #ff1e72;
-  text-shadow: 2px 2px #383B49;
-}
-
 input[type="checkbox"], input[type="radio"] {
   float: right;
   margin: -30px 18px 0 0;
@@ -82,10 +75,25 @@ input[type="checkbox"], input[type="radio"] {
   -o-transform: scale(2);
 }
 
-p{
+p {
   font-size: 1.5em;
 }
 
+.sad {
+  margin-bottom: 50px;
+}
 .sign_in {
   padding-left: 40px;
+}
+
+#okcupid{
+  color: white;
+  background-color: #ff1e72;
+  text-shadow: 2px 2px #383B49;
+}
+
+#tinder{
+  color: white;
+  background-color: #f75933;
+  text-shadow: 2px 2px #383B49;
 }
