refactoring home controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if @render %>
-  <% if @num_best_photos > 0 %>
+  <% if @photos.count > 0 %>
     <h1>Your best photos:</h1>
     <form action = "/" method="post">
     <div class="photo">
