--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,18 +26,22 @@
         </div>
       </div>
     </form>
-    <h3><%= @num_best_photos %> photos found.</h3>
-    <% else %>      
-      <div>
-        Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
-        <img class="sad" src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
-      </div>
+    <% if @photos.count > 1 %> 
+      <h3> <%= @photos.count %> photos found.</h3>
+    <% else %>
+      <h3> 1 photo found.</h3>      
     <% end %>
+  <% else%>
+    <div>
+      Sorry! Likes Me could not find any good photos of you. Maybe you should go work on your <a href="http://www.jokes.com/">jokes</a>.<br>
+      <img class="sad" src="http://indiana.laxallstars.com/files/2011/06/sad-face-paper-bag.jpg" alt=":c">
+    </div>
+  <% end %>
 
 
 
 <% else %>
-  <h1><%= button_to "Find my best\nphotos!", user_omniauth_authorize_path(:facebook) %></h1>
+    <h1><%= button_to "Find my best\nphotos!", user_omniauth_authorize_path(:facebook) %></h1>
 <% end %>
 
 
