--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,10 +48,10 @@
         <!-- <div class="col-md-4"> -->
           <!-- <button type="submit">Save Best Photos!</button>   -->
         <!-- </div> -->
-        <div class="col-md-6">
+        <div class="col-md-3 col-md-offset-3">
           <button id="okcupid">Export to OKCupid<sup>&beta;</sup></button>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-3">
           <button id="tinder">Export to tinder<sup>&beta;</sup></button>
         </div>
       </div>
