--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,10 +27,6 @@
       </ul>
     </div>
 
-
-
-
-
     <form action = "/" method="post">
     <div class="photo">
       <div class="row">
@@ -45,9 +41,6 @@
     </div>
 
       <div class="row">
-        <!-- <div class="col-md-4"> -->
-          <!-- <button type="submit">Save Best Photos!</button>   -->
-        <!-- </div> -->
         <div class="col-md-3 col-md-offset-3">
           <button id="okcupid">Export to OKCupid<sup>&beta;</sup></button>
         </div>
@@ -70,7 +63,7 @@
 
 <% else %>
 
-    <a type="button" class="btn btn-default find_button shadow" href="<%= user_omniauth_authorize_path(:facebook) %>">
+    <a type="button" class="btn btn-default find_button" href="<%= user_omniauth_authorize_path(:facebook) %>">
       <div id="find">
         Find my best<br>photos!
       </div>
