--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
 
       <div class="row">
         <div class="col-md-3 col-md-offset-3">
-          <button id="okcupid">Export to OKCupid<sup>&beta;</sup></button>
+          <button id="okcupid">Export to OkCupid<sup>&beta;</sup></button>
         </div>
         <div class="col-md-3">
           <button id="tinder">Export to tinder<sup>&beta;</sup></button>
